--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
       "angular": "latest",
       "angular-ui-router": "latest",
       "angular-animate": "latest",
+      "angular-devise": "latest",
       "bootstrap-sass-official": "latest"
     }
   },
